syntax = "proto3";

package greet;

option go_package = "projects/Greet/proto";

message operand {
    uint32 firstNum = 1;
    uint32 secondNum = 2;

}
message response {
    uint32 answer = 1;
}

message greetRequest {
    string name = 1;
}

message greetResponse {
    string response = 1;
}

service Calculator {
    rpc sum (operand) returns (response);
    rpc greetManyResponse (greetRequest) returns (stream greetResponse);
} 